--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loader">
+        <div class="preloader"></div>
+    </div>
     <div class="container">
         <div class="banner">
             <header id="site-header" class="header">
